1
Loading source files for package database...
Loading source files for package database.table...
Loading source files for package database.table.row...
Loading source files for package database.table.relation...
Loading source files for package database.table.column...
Constructing Javadoc information...
Standard Doclet version 1.8.0_111
Building tree for all the packages and classes...
Generating ./doc/database/Database.html...
src/database/Database.java:121: warning: no @param for <T>
  public <T extends Comparable<? super T>> Table<T> createTable(String tableName, Class<T> primaryKeyType, String primaryKeyName) throws HarambException {
                                                    ^
src/database/Database.java:121: warning: no @return
  public <T extends Comparable<? super T>> Table<T> createTable(String tableName, Class<T> primaryKeyType, String primaryKeyName) throws HarambException {
                                                    ^
src/database/Database.java:141: warning: no @param for <T>
  public <T extends Comparable<? super T>> Table<T> getTable(String tableName, Class<?> type) throws HarambException {
                                                    ^
src/database/Database.java:254: warning: no @return
  public static final Database load(final String dbName) throws HarambException {
                               ^
src/database/Database.java:47: error: unexpected content
* @see     {@link Partition}
  ^
src/database/Database.java:48: error: unexpected content
* @see     {@link HarambePartition}
  ^
src/database/Database.java:49: error: unexpected content
* @see     {@link Relation}
  ^
src/database/Database.java:50: error: unexpected content
* @see     {@link Table}
  ^
src/database/Database.java:53: warning - Tag @see:illegal character: "123" in "{@link Partition}"
src/database/Database.java:53: warning - Tag @see:illegal character: "64" in "{@link Partition}"
src/database/Database.java:53: warning - Tag @see:illegal character: "123" in "{@link HarambePartition}"
src/database/Database.java:53: warning - Tag @see:illegal character: "64" in "{@link HarambePartition}"
src/database/Database.java:53: warning - Tag @see:illegal character: "123" in "{@link Relation}"
src/database/Database.java:53: warning - Tag @see:illegal character: "64" in "{@link Relation}"
src/database/Database.java:53: warning - Tag @see:illegal character: "123" in "{@link Table}"
src/database/Database.java:53: warning - Tag @see:illegal character: "64" in "{@link Table}"
Generating ./doc/database/HarambException.html...
Generating ./doc/database/table/HarambePartition.html...
Generating ./doc/database/table/Partition.html...
Generating ./doc/database/table/Table.html...
src/database/table/Table.java:137: warning: no @return
  public Class<?> getPrimaryKeyType() {
                  ^
src/database/table/Table.java:231: warning: no @param for <OtherPrimaryKey>
  public <OtherPrimaryKey extends Comparable<? super OtherPrimaryKey>> ArrayLinearList<Row> getRowWithRelation(PrimaryKey key, Database db) throws HarambException {
                                                                                            ^
src/database/table/Table.java:289: warning: no @param for <OtherPrimaryKey>
  public <OtherPrimaryKey extends Comparable<? super OtherPrimaryKey>> List<Row> getRowWithRelations(PrimaryKey key, Database db) throws HarambException {
                                                                                 ^
src/database/table/Table.java:314: warning: no @param for columnName
  public Column getColumn(String columnName) {
                ^
src/database/table/Table.java:314: warning: no @return
  public Column getColumn(String columnName) {
                ^
src/database/table/Table.java:335: warning: no @return
  public String name() {
                ^
src/database/table/Table.java:342: warning: no @return
  public String primaryKeyName() {
                ^
src/database/table/Table.java:110: warning: no @throws for database.HarambException
  public Table(String dbPath, String tableName, Class<?> primaryKeyType, String primaryKeyName) throws HarambException {
         ^
Generating ./doc/database/table/row/HarambeRow.html...
src/database/table/row/Row.java:29: warning: no @param for <T>
  public <T> Row set(Column col, T element) throws HarambException;
                 ^
src/database/table/row/Row.java:41: warning: no @param for <T>
  public <T> T get(Column column);
               ^
src/database/table/row/Row.java:41: warning: no @param for column
  public <T> T get(Column column);
               ^
src/database/table/row/HarambeRow.java:37: warning: no @param for list
  public HarambeRow(ColumnList list) {
         ^
Generating ./doc/database/table/row/Row.html...
Generating ./doc/database/table/relation/Relation.html...
src/database/table/relation/Relation.java:81: warning: no @return
  public Type type() {
              ^
src/database/table/relation/Relation.java:88: warning: no @return
  public Class<?> otherPrimaryKeyType() {
                  ^
src/database/table/relation/Relation.java:95: warning: no @return
  public String tableName() {
                ^
Generating ./doc/database/table/relation/Relation.Type.html...
Generating ./doc/database/table/column/Column.html...
src/database/table/column/Column.java:56: warning: no @return
  public Class<?> type() {
                  ^
src/database/table/column/Column.java:63: warning: no @return
  public int index() {
             ^
src/database/table/column/Column.java:111: warning: no @param for <PK>
  public <PK extends Comparable<? super PK>> Table<PK> getRelatedTable(Database db) throws HarambException {
                                                       ^
src/database/table/column/Column.java:111: warning: no @param for db
  public <PK extends Comparable<? super PK>> Table<PK> getRelatedTable(Database db) throws HarambException {
                                                       ^
src/database/table/column/Column.java:28: error: reference not found
* @see     Row
           ^
Generating ./doc/database/table/column/ColumnList.html...
src/database/table/column/ColumnList.java:35: warning: no @param for <T>
  public <T> void add(String columnName, Column col);
                  ^
src/database/table/column/ColumnList.java:42: warning: no @param for <T>
  public <T> Column get(String columnName);
                    ^
src/database/table/column/ColumnList.java:25: error: reference not found
* @see     Table
           ^
src/database/table/column/ColumnList.java:26: error: reference not found
* @see     Row
           ^
Generating ./doc/database/table/column/HarambeColumnList.html...
Generating ./doc/overview-frame.html...
Generating ./doc/database/package-frame.html...
Generating ./doc/database/package-summary.html...
Generating ./doc/database/package-tree.html...
Generating ./doc/database/table/package-frame.html...
Generating ./doc/database/table/package-summary.html...
Generating ./doc/database/table/package-tree.html...
Generating ./doc/database/table/column/package-frame.html...
Generating ./doc/database/table/column/package-summary.html...
Generating ./doc/database/table/column/package-tree.html...
Generating ./doc/database/table/relation/package-frame.html...
Generating ./doc/database/table/relation/package-summary.html...
Generating ./doc/database/table/relation/package-tree.html...
Generating ./doc/database/table/row/package-frame.html...
Generating ./doc/database/table/row/package-summary.html...
Generating ./doc/database/table/row/package-tree.html...
Generating ./doc/constant-values.html...
Generating ./doc/serialized-form.html...
Building index for all the packages and classes...
Generating ./doc/overview-tree.html...
Generating ./doc/index-all.html...
Generating ./doc/deprecated-list.html...
Building index for all classes...
Generating ./doc/allclasses-frame.html...
Generating ./doc/allclasses-noframe.html...
Generating ./doc/index.html...
Generating ./doc/overview-summary.html...
Generating ./doc/help-doc.html...
7 errors
33 warnings
